<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
  	
  <modelVersion>4.0.0</modelVersion>
  	
  <groupId>at.jku.se.prse.example</groupId>
  	
  <artifactId>test</artifactId>
  	
  <version>1.0</version>
  	
  <packaging>pom</packaging>
  	
	
	
  <name>test-build</name>
  	
  <modules>
    		
    <module>at.jku.se.prse.example.calculator</module>
    	  
    <module>Fahrtenbuch</module>
      
  </modules>
  	
  <build>
    		
    <pluginManagement>
      		    
      <plugins>
        		      
        <plugin>
          		        
          <artifactId>maven-compiler-plugin</artifactId>
          		        
          <version>3.7.0</version>
          		        
          <configuration>
            		          
            <source>15</source>
            		          
            <target>15</target>
            		          

            		        
          </configuration>
          		      
        </plugin>
        			    
			      
        <plugin>
              
          <groupId>org.apache.maven.plugins</groupId>
              
          <artifactId>maven-surefire-plugin</artifactId>
                  
          <version>3.0.0-M4</version>
          
        </plugin>
        		    
      </plugins>
      		
    </pluginManagement>
    	
  </build>
  	
  <dependencies>
      	  	
    <dependency>
      	  		
      <groupId>junit</groupId>
      	  		
      <artifactId>junit</artifactId>
      	  		
      <scope>test</scope>
      	  		
      <version>4.12</version>
      	  	
    </dependency>
    		
  </dependencies>
	
	<properties>
  <sonar.organization>sarakheribi</sonar.organization>
  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
</properties>
  
</project>
